# zhihudaily

./: .gitignore  Pipfile  README.md  app.py  fetch_data.py  manage.py  pyproject.toml  requirements.txt  run.py  zhihudaily.py
docs/: blabla.md  progress_report.md
static/: zhihu_daily.css  zhihudaily.css
static/css/: zhihudaily.css
static/js/: zhihudaily.js
static/js/lib/: jquery.isloading.min.js
templates/: base.html  index.html  macros.html  pages.html  pagination.html  test.html  three_columns.html  with_image.html
zhihudaily/: __init__.py  _compat.py  app.py  cache.py  configs.py  crawler.py  extensions.py  models.py  sentry.py  utils.py
zhihudaily/static/: robots.txt
zhihudaily/static/css/: zhihudaily.css
zhihudaily/static/css/lib/: zhihu_news.css
zhihudaily/static/js/: zhihudaily.js
zhihudaily/templates/: base.html  index.html  layout.html  not_found.html  pages.html  three_columns.html  with_image.html
zhihudaily/views/: feeds.py  index.py  pages.py  three_columns.py  utils.py  with_image.py
