[tool.poetry]
name = "zhihudaily"
version = "0.1.0"
description = "Yet another zhihudaily web app powered by Flask."
authors = ["lord63 <lord63.j@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.1.2"
requests = "^2.24.0"
peewee = "^3.13.3"
flask-paginate = "^0.7.0"
redis = "^3.5.3"
flask-cache = "^0.13.1"
raven = {version = "^6.10.0", extras = ["flask"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
